--- a/components/nav/nav.module.scss
+++ b/components/nav/nav.module.scss
@@ -20,12 +20,12 @@
         float: left;
     }
 
-    [aria-current] {
+    .current {
         position: relative;
         display: inline-block;
     }
 
-    [aria-current]::after {
+    .current::after {
         position: absolute;
         content: '';
         width: calc(100% - 1em);
