--- a/components/button/button.module.scss
+++ b/components/button/button.module.scss
@@ -1,6 +1,6 @@
 @use '../../styles/colors';
 
-button {
+.button {
     display: block;
     border: 2px solid colors.$averageColor;
     background-color: white;
