--- a/components/button/button.module.scss
+++ b/components/button/button.module.scss
@@ -11,6 +11,7 @@
     border-radius: 10px;
     transition: border-color .3s, color .3s, background-color .3s;
     box-shadow: 0 1px 3px rgba(0, 0, 0, .4);
+    margin-right: 1em;
     cursor: pointer;
 
     &:hover {
