--- a/components/pomodoro/pomodoro.module.scss
+++ b/components/pomodoro/pomodoro.module.scss
@@ -10,6 +10,8 @@ $side: 250px;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
 
     &.active {
         background-color: colors.$accentColor;
